<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">androidSnake</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="home_icon">home_icon</string>
    <string name="com.example.zorg.androidsnakepoc">com.example.zorg.androidsnakepoc</string>
    <string name="start_score">0</string>
    <string name="gameover">Game Over</string>
    <string name="default_threshold">1.5</string>
    <string name="default_range">0.9</string>
    <string name="start_speed">Speed</string>
    <string name="start_tilt">Tilt</string>
    <string name="start_range">Range</string>
    <string name="title_activity_snake_screen">SnakeScreen</string>
    <string name="title_activity_stat_screen">StatScreen</string>
    <string name="title_activity_ate_picker_screen">atePickerScreen</string>
    <string name="title_activity_date_picker_screen">DatePickerScreen</string>

</resources>
